--- a/package.json
+++ b/package.json
@@ -5,25 +5,22 @@
   "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel public/index.html",
-    "build": "parcel build public/index.html",
+    "start": "parcel public/index.html  --no-source-maps",
+    "build:new" : "browserify public/jsonata.js -o bundle.js",
+    "build": "parcel build public/index.html -d dist --no-source-maps",
     "upload": "node ./scripts/upload",
     "mkdir-dist": "mkdirp ./dist",
     "build:upload": "npm run build && npm run upload",
-    "openfile": "node ./scripts/openFileOnServer",
-    "build-es5": "npm run mkdir-dist && npm run regenerator && npm run browserify-es5 && npm run minify-es5"
+    "openfile": "node ./scripts/openFileOnServer"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bootstrap": "^4.5.3",
-    "jsonata": "^1.8.4",
-    "open": "^7.3.0",
-    "parcel-plugin-inliner": "^1.0.16",
-    "regenerator": "^0.14.7"
-  },
-  "devDependencies": {
+    "browserify": "^17.0.0",
     "cssnano": "^5.0.5",
+    "open": "^7.3.0",
+    "parcel-bundler": "^1.12.5",
+    "parcel-plugin-inliner": "^1.0.16",
     "posthtml": "^0.13.4",
     "posthtml-inline-assets": "^3.1.0"
   }
