--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel public/index.html  --no-source-maps",
-    "build:new" : "browserify public/jsonata.js -o bundle.js",
     "build": "parcel build public/index.html -d dist --no-source-maps",
     "upload": "node ./scripts/upload",
     "mkdir-dist": "mkdirp ./dist",
@@ -16,8 +15,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "browserify": "^17.0.0",
     "cssnano": "^5.0.5",
+    "fm-webviewer-fetch": "^1.0.1",
     "open": "^7.3.0",
     "parcel-bundler": "^1.12.5",
     "parcel-plugin-inliner": "^1.0.16",
